--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,38 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+body {
+  height: 100vh;
 }
 
+.pages {
+  background-color: azure;
+  padding: 20px 250px;
+  text-align: center;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: blanchedalmond;
+  padding: 10px 250px;
+  justify-content: space-between;
+}
+ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .App-link {
